--- a/client-side/index.html
+++ b/client-side/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Groceries</title>
 <meta charset="utf-8"/>
+<title>Groceries</title>
+
 
 <link rel="icon" type="image/png" sizes="256x256" href="static/favicon/brown-bag.png">
 
